objects/Account/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone of manager</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>