objects/Account/recordTypes/Partner_Acount.recordType-meta.xml
<RecordType>
    <fullName>Partner_Acount</fullName>
    <active>true</active>
    <label>Partner Acount</label>
</RecordType>